<resources>
    <string name="app_name">Treasurehunt</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <string name="copyright">Copyright &#169; 2022, Yingfan He</string>
    <string name="version">1.0.0</string>
    <string name="builtTime">20220421</string>
    <string name="introduction">This is a debug build.</string>

    <string name="x_distance">X distance:</string>
    <string name="y_distance">Y distance:</string>
    <string name="x_position">X position:</string>
    <string name="y_position">Y position:</string>
    <string name="score">Score:</string>

    <string name="hint_name">Name…</string>
    <string name="hint_x_position">X position…(1 to 10)</string>
    <string name="hint_y_position">Y position…(1 to 10)</string>
    <string name="hint_score">Score…(integer number)</string>

    <string name="delmsg">Do you really want to delete %s?</string>
    <string name="addmsg">Successfully added: %s </string>
    <string name="welcomeMsg">Welcome to the new treasure hunt app!</string>
    <string name="show_message">Show message at start</string>
    <string name="show_point_score">Show score of points</string>
    <string name="card_color">Color of Cards</string>
    <string name="welcome">Welcome</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="back_to_main">Back to Main</string>
    <string name="steps">Steps:</string>
    <string name="defaultValue">0</string>

    <string-array name="colors">
        <item>Blue</item>
        <item>Pink</item>
    </string-array>

    <string-array name="color_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>